@@ -1,6 +1,10 @@
 WebHelpers ChangeLog
 
 0.2.3 (**svn**)
+* WARNING: Due to a typo, the Text helper highlight function no longer
+  highlights text with the CSS class name 'hilight' by default: it now uses the
+  CSS class name 'highlight' instead. The function's 'hilighter' keyword
+  argument has also been deprecated, use 'highlighter' instead.
 * Sync'd Text helper to 5629.
 * Sync'd Date helper to 6080.
 * Sync'd Tags helper to 5857.
